--- a/sass/components/_inc/_dropdown.sass
+++ b/sass/components/_inc/_dropdown.sass
@@ -30,7 +30,7 @@
 	background: white
 	padding: 0
 	margin: 0
-	border: 1px solid colors(brand-primary)
+	border: 1px solid $color-keyline-light
 
 	// Menu items.
 	> ul
@@ -42,11 +42,11 @@
 			line-height: 1
 			width: 100%
 			&:not(:last-of-type)
-				border-bottom: 1px solid colors(brand-primary)
+				border-bottom: 1px solid $color-keyline-light
 
 			> a
 				display: block
-				padding: sizes(single)
+				padding: sizes(base)
 				color: colors(brand-primary)
 				font-size: rem(14px)
 				&:hover
