--- a/sass/components/_inc/_list.sass
+++ b/sass/components/_inc/_list.sass
@@ -1,3 +1,7 @@
+
+// +list(bordered)
+
+
 .vertical-list
 	+nobullet
 	li
@@ -13,7 +17,3 @@
 	&.is-thin
 		> li
 			padding: sizes(half) sizes(base)
-
-	&.is-bordered
-
-	&.is-removable
