--- a/sass/components/components.sass
+++ b/sass/components/components.sass
@@ -12,6 +12,7 @@
 @import "_inc/icons"
 @import "_inc/labels"
 @import "_inc/list"
+@import "_inc/panel"
 @import "_inc/masthead"
 @import "_inc/navigation"
 @import "_inc/normalise"
