--- a/sass/config/_inc/_text-sizes.scss
+++ b/sass/config/_inc/_text-sizes.scss
@@ -34,13 +34,13 @@ $text-sizing: (
   ),
   medium: (
     device-small: (
-      font-size: rem(16px)
+      font-size: rem(18px)
     ),
     device-medium: (
-      font-size: rem(18px)
+      font-size: 18px
     ), 
     device-large: (
-      font-size: rem(18px)
+      font-size: 18px
     )
   ),
   medium-large: (
