--- a/sass/helpers/_inc/_typography.sass
+++ b/sass/helpers/_inc/_typography.sass
@@ -28,3 +28,10 @@
 	+responsive-text-size(large)
 .text-xlarge
 	+responsive-text-size(x-large)
+
+
+.text-primary
+	color: colors(brand-primary) !important
+
+.text-muted
+	color: colors(greyscale, mid) !important
