--- a/sass/components/_inc/_card.sass
+++ b/sass/components/_inc/_card.sass
@@ -1,11 +1,13 @@
-=box($padding)
-	+box-shadow($form-shadow)
-	+border-radius(3px)
-	border: 1px solid $color-keyline-light
-	background: white
+// =box($padding)
+// 	+box-shadow($form-shadow)
+// 	+border-radius(3px)
+// 	border: 1px solid $color-keyline-light
+// 	background: white
 
-	header, footer, main
-		padding: $padding
+// 	header, footer, main
+// 		padding: $padding
 
-	header, main
-		border-bottom: 1px solid $color-keyline-light
+// 	header, main
+// 		border-bottom: 1px solid $color-keyline-light
+
+
