--- a/sass/components/_inc/_navigation.sass
+++ b/sass/components/_inc/_navigation.sass
@@ -11,9 +11,8 @@ section
 
 
 .secondary-nav
-	position: absolute
-	top: 0
-	left: 0
+
+	&.vertical   
 	width: 100%
 	z-index: 9999 // Temp
 	+respond(device-large)
