--- a/sass/mixins/_inc/_background.sass
+++ b/sass/mixins/_inc/_background.sass
@@ -1,4 +1,6 @@
-=background-image($size, $position: center, $repeat: no-repeat)
+=background-image($url, $size: cover, $position: center, $repeat: no-repeat)
+	background-image: url($url)
+	background-color: null
 	background-size: $size
 	background-position: $position
 	background-repeat: $repeat
